force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/IdServiceVivoNet__c.field-meta.xml
<CustomField>
    <fullName>IdServiceVivoNet__c</fullName>
    <description>Id do atendimento que é retornado da API de palitagem no Vivonet.</description>
    <label>Id do Atendimento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>