force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/InteractionNumberInternal__c.field-meta.xml
<CustomField>
    <fullName>InteractionNumberInternal__c</fullName>
    <displayFormat>I{0000000}</displayFormat>
    <label>Número da Interação</label>
    <type>AutoNumber</type>
</CustomField>