force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/LineProtocolNumber__c.field-meta.xml
<CustomField>
    <fullName>LineProtocolNumber__c</fullName>
    <description>Jornada119 - salvar protocolo do vivonet baseado na linha. Utilizado IP valCallOutProtocolItemVivoNet</description>
    <label>Número do Protocolo da Linha</label>
    <length>40</length>
    <type>Text</type>
</CustomField>