force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/OrderIssued__c.field-meta.xml
<CustomField>
    <fullName>OrderIssued__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Emitido</label>
    <referenceTo>OrderIssued__c</referenceTo>
    <relationshipLabel>Customer Interaction Topics</relationshipLabel>
    <relationshipName>CustomerInteractionTopics</relationshipName>
    <type>Lookup</type>
</CustomField>