force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>GPS Pré</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>Hybris</fullName>
            </value>
            <value>
                <fullName>NEXT</fullName>
                <isActive>false</isActive>
                <label>NEXT</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SFA Script - Next</fullName>
            </value>
            <value>
                <fullName>VIVO/NET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>