force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/OtherProduct__c.field-meta.xml
<CustomField>
    <fullName>OtherProduct__c</fullName>
    <description>Salva o número da linha da palitagem móvel caso o ativo não seja encontrado no SFA</description>
    <label>Produto Outros</label>
    <type>TextArea</type>
</CustomField>