force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/ProtocolNumber__c.field-meta.xml
<CustomField>
    <fullName>ProtocolNumber__c</fullName>
    <formula>vlocity_cmt__CustomerInteractionId__r.InteractionNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do Protocolo</label>
    <type>Text</type>
</CustomField>