force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/remarkup__c.field-meta.xml
<CustomField>
    <fullName>remarkup__c</fullName>
    <description>Remark Up from user when create Relationship Topic</description>
    <label>Comentário</label>
    <type>TextArea</type>
</CustomField>