force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/ServiceTree__c.field-meta.xml
<CustomField>
    <fullName>ServiceTree__c</fullName>
    <label>Árvore de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
                <label>Atendimento</label>
            </value>
            <value>
                <fullName>Retention</fullName>
                <label>Retenção</label>
            </value>
            <value>
                <fullName>Hybrid</fullName>
                <label>Híbrido</label>
            </value>
            <value>
                <fullName>Ombudsman</fullName>
                <label>Ouvidoria</label>
            </value>
            <value>
                <fullName>Store</fullName>
                <label>Loja</label>
            </value>
            <value>
                <fullName>DigitalChannels</fullName>
                <label>Canais Digitais</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>