force-app/main/default/objects/vlocity_cmt__CustomerInteractionTopic__c/fields/TopicName__c.field-meta.xml
<CustomField>
    <fullName>TopicName__c</fullName>
    <description>Complete Topic Name from tree (path)</description>
    <label>Palito</label>
    <type>TextArea</type>
</CustomField>